# arcos_uc3m

./: .gitignore
lab_1/: es-m4-lab-2021.docx
lab_1/ejemplo/: a.out  cachegrind.out.4547  test.c
lab_1/lab-cache/: CMakeLists.txt
lab_2/: bucle1_factor2.s  bucle1_factor4.s  bucle2_factor2.s  bucle2_factor4.s  ex1.s  example.s  notas.txt  total_factor2.s  total_factor4.s
lab_3/src/: CMakeLists.txt  build.sh  counter.cpp  counter_atomic.cpp  counter_mutex.cpp  counter_spin_ra.cpp  counter_spin_ra_opt.cpp  counter_spin_seq.cpp  counter_spin_seq_opt.cpp  run.sh
lab_3/src/tests/: lscpu_captura.txt  run_samples.sh  sample.py
lab_3/src/tests/debug/: samples_counter_atomic  samples_counter_mutex  samples_counter_spin_ra  samples_counter_spin_ra_opt  samples_counter_spin_seq  samples_counter_spin_seq_opt
lab_3/src/tests/release/: samples_counter_atomic  samples_counter_mutex  samples_counter_spin_ra  samples_counter_spin_ra_opt  samples_counter_spin_seq  samples_counter_spin_seq_opt
output_lab/: anova_result  kruskal_result  mean_comparisson.py
p_1/: .gitignore
p_1/src/: a.out  (+9 more)
p_2/src/: .gitignore  CMakeLists.txt  asd  build.sh  obj.cpp  obj.hpp  run.sh  sim.cpp  util.cpp  util.hpp
p_2/src/tests/: 1core_samples  8core_samples  8core_samples_novec  8core_samples_vec  hipotesis.py  p_1_samples  resultados_kruskal.txt  sample.py  soa_vs_aos_t_parallel  statistic.py  t_test_aos_seq_vs_soa_p  t_test_soa_p_vs_aos_p  t_test_soa_seq_vs_aos_p
p_2/src/tests/aos/: 16core_samples  2core_samples  4core_samples  8core_samples  no_if_samples  p_1_samples  resultados_kruskal  resultados_kruskal_&_t  resultados_t_8core_vs_no_if
p_2/src/tests/soa/: 16core_samples  1core_samples  2core_samples  4core_samples  resultados_t_8core_vs_no_if  samples
sim-aos lab2/: CMakeLists.txt  obj.cpp  sim.cpp  util.cpp  util.hpp
(+60 files in other folders)
